# eris

./: .gitignore  README.md  devenv.nix  justfile  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: python-app.yml
docs/source/: conf.py  index.rst
src/eris/: __init__.py  decorator.py  main.py  steane.py  utils.py
tests/: test_main.py  test_steane_prep.py  test_utils.py  util.py
