[project]
name = "eris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Seyon Sivarajah", email = "seyon.sivarajah@quantinuum.com" }
]
requires-python = ">=3.10"
dependencies = [
    "guppylang>=0.14.0",
]

[project.scripts]
eris = "eris:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]
