[project]
name = "eris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Seyon Sivarajah", email = "seyon.sivarajah@quantinuum.com" },
]
requires-python = ">=3.10"
dependencies = [
    "eldarion>=0.2.0rc1",
    "guppylang>=0.14.0,<0.15",
    "hsim>=0.4.1,<0.5",
    "hugr>=0.10.2",
]

[project.scripts]
eris = "eris:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.3", "ruff>=0.7.3"]

[tool.uv]
extra-index-url = [
    "https://quantinuumsw.jfrog.io/artifactory/api/pypi/pypi_local/simple",
]

[tool.uv.sources]
guppylang = { git = "https://github.com/CQCL/guppylang.git", branch = "ss/collate" }
